--- a/calculations/templates/calculations/assignment_confirm_delete.html
+++ b/calculations/templates/calculations/assignment_confirm_delete.html
@@ -1,6 +1,6 @@
 {% extends "calculations/index.html" %}
 
-{% block content %}
+{% block main %}
 
     <form action="" method="post">{% csrf_token %}
         <p>Are you sure you want to delete assignment "{{ object }}"?</p>
