--- a/calculations/templates/calculations/index.html
+++ b/calculations/templates/calculations/index.html
@@ -9,7 +9,18 @@ Calculate
 <!-- Begin content page -->
 <div class="container-fluid">
     <div class="row">
-        {% include 'calculations/course_list.html' %}
+        <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
+            <ul class="nav nav-pills flex-column">
+                <li class="nav-item"><a class="nav-link" href="{% url 'calculations:add_course' %}">Add course</a></li>
+                {% if courses %}
+                {% for course in courses %}
+                <li class="nav-item"><a class="nav-link" href="{% url 'calculations:view_course' course.id %}">{{ course.course_name }}</a></li>
+                {% endfor %}
+                {% else %}
+                <li class="nav-item"><a class="nav-link">No courses are available.</a></li>
+                {% endif %}
+            </ul>
+        </nav>
         <main role="main" class="col-sm-9 ml-sm-auto col-md-10 pt-3">
             {% block main %}{% endblock %}
             <h1>Home</h1>
